--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    background-color: #F6F6F6;
+    font-family: 'Playfair Display', serif;
+    background-color: #FCF8E8;
 }
 a{
     text-decoration: none;
 }
 h1,p{
     margin: 0;
+}
+.navbar-brand{
+    font-size: 36px;
+    font-weight: 900;
 }
 .avatar-img{
     width: 35px;
@@ -25,13 +30,15 @@ h1,p{
     justify-content: space-between;
 }
 .sub__nav__link a{
-    color: #858585;
+    font-size: 18px;
+    font-weight: 600;
+    color: #000;
     padding: 5px;
     transition: 0.2s ease-in-out;
 }
 .sub__nav__link a:hover{
-    color: #5D5FEF;
-    background-color: #EEEFFF;
+    color: #FDEEDC;
+    background-color: #E38B29;
 }
 .category__result__text{
     font-size: 18px;
@@ -49,6 +56,9 @@ h1,p{
     display: flex;
     align-items: center;
 }
+.news__card{
+    font-family: 'Open Sans', sans-serif;
+}
 .card-body{
     display: flex;
     /* justify-content: center; */
@@ -60,6 +70,7 @@ h1,p{
     align-items: center;
 }
 .news__title{
+    font-family: 'Playfair Display', serif;
     font-size: 24px;
     font-weight: 700;
 }
@@ -131,6 +142,7 @@ h1,p{
     color: #515151;
 }
 .news__article{
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     font-weight: 400;
     color: #515151;
